--- a/docs/nb/bgs_map-2randoms.ipynb
+++ b/docs/nb/bgs_map-2randoms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "b478cecd-4a3d-4247-bbf8-4862a8765887",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "4e338d02-a02c-4098-a938-d17e1f9c1b29",
    "metadata": {},
    "outputs": [
@@ -355,137 +355,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime of 0.082690 seconds after 0 pixels\n",
-      "Runtime of 7.799107 seconds after 100 pixels\n",
-      "Runtime of 18.236250 seconds after 200 pixels\n",
-      "Runtime of 25.490952 seconds after 300 pixels\n",
-      "Runtime of 37.713565 seconds after 400 pixels\n",
-      "Runtime of 46.758010 seconds after 500 pixels\n",
-      "Runtime of 57.203905 seconds after 600 pixels\n",
-      "Runtime of 66.052762 seconds after 700 pixels\n",
-      "Runtime of 80.074695 seconds after 800 pixels\n",
-      "Runtime of 90.053075 seconds after 900 pixels\n",
-      "Runtime of 97.439617 seconds after 1000 pixels\n",
-      "Runtime of 108.536929 seconds after 1100 pixels\n",
-      "Runtime of 121.206518 seconds after 1200 pixels\n",
-      "Runtime of 133.947059 seconds after 1300 pixels\n",
-      "Runtime of 144.839179 seconds after 1400 pixels\n",
-      "Runtime of 155.253938 seconds after 1500 pixels\n",
-      "Runtime of 164.231589 seconds after 1600 pixels\n",
-      "Runtime of 174.557837 seconds after 1700 pixels\n",
-      "Runtime of 183.091106 seconds after 1800 pixels\n",
-      "Runtime of 189.544168 seconds after 1900 pixels\n",
-      "Runtime of 198.925552 seconds after 2000 pixels\n",
-      "Runtime of 208.498959 seconds after 2100 pixels\n",
-      "Runtime of 215.519622 seconds after 2200 pixels\n",
-      "Runtime of 221.588747 seconds after 2300 pixels\n",
-      "Runtime of 230.556201 seconds after 2400 pixels\n",
-      "Runtime of 239.383139 seconds after 2500 pixels\n",
-      "Runtime of 248.017923 seconds after 2600 pixels\n",
-      "Runtime of 256.253175 seconds after 2700 pixels\n",
-      "Runtime of 267.285074 seconds after 2800 pixels\n",
-      "Runtime of 279.512652 seconds after 2900 pixels\n",
-      "Runtime of 292.987235 seconds after 3000 pixels\n",
-      "Runtime of 302.779608 seconds after 3100 pixels\n",
-      "Runtime of 311.381864 seconds after 3200 pixels\n",
-      "Runtime of 320.219260 seconds after 3300 pixels\n",
-      "Runtime of 331.064644 seconds after 3400 pixels\n",
-      "Runtime of 339.977304 seconds after 3500 pixels\n",
-      "Runtime of 351.487396 seconds after 3600 pixels\n",
-      "Runtime of 363.857572 seconds after 3700 pixels\n",
-      "Runtime of 373.604394 seconds after 3800 pixels\n",
-      "Runtime of 380.512226 seconds after 3900 pixels\n",
-      "Runtime of 391.091253 seconds after 4000 pixels\n",
-      "Runtime of 401.720711 seconds after 4100 pixels\n",
-      "Runtime of 410.310901 seconds after 4200 pixels\n",
-      "Runtime of 418.573193 seconds after 4300 pixels\n",
-      "Runtime of 425.767397 seconds after 4400 pixels\n",
-      "Runtime of 435.417484 seconds after 4500 pixels\n",
-      "Runtime of 446.427747 seconds after 4600 pixels\n",
-      "Runtime of 455.503417 seconds after 4700 pixels\n",
-      "Runtime of 465.188195 seconds after 4800 pixels\n",
-      "Runtime of 472.647916 seconds after 4900 pixels\n",
-      "Runtime of 480.570615 seconds after 5000 pixels\n",
-      "Runtime of 487.620961 seconds after 5100 pixels\n",
-      "Runtime of 498.648979 seconds after 5200 pixels\n",
-      "Runtime of 510.503247 seconds after 5300 pixels\n",
-      "Runtime of 525.075833 seconds after 5400 pixels\n",
-      "Runtime of 540.950239 seconds after 5500 pixels\n",
-      "Runtime of 549.960181 seconds after 5600 pixels\n",
-      "Runtime of 560.968970 seconds after 5700 pixels\n",
-      "Runtime of 568.515002 seconds after 5800 pixels\n",
-      "Runtime of 576.865235 seconds after 5900 pixels\n",
-      "Runtime of 583.963072 seconds after 6000 pixels\n",
-      "Runtime of 590.806620 seconds after 6100 pixels\n",
-      "Runtime of 597.261522 seconds after 6200 pixels\n",
-      "Runtime of 605.494352 seconds after 6300 pixels\n",
-      "Runtime of 614.631553 seconds after 6400 pixels\n",
-      "\n",
-      "\n",
-      "Total runtime of 625.794035 seconds after 200000 pixels\n"
+      "Runtime of 1.291886 seconds after 0 pixels\n",
+      "Runtime of 38.902176 seconds after 100 pixels\n",
+      "Runtime of 46.937475 seconds after 200 pixels\n",
+      "Runtime of 53.398159 seconds after 300 pixels\n",
+      "Runtime of 86.933920 seconds after 400 pixels\n",
+      "Runtime of 93.991439 seconds after 500 pixels\n",
+      "Runtime of 133.368797 seconds after 600 pixels\n",
+      "Runtime of 189.796095 seconds after 700 pixels\n",
+      "Runtime of 289.969686 seconds after 800 pixels\n",
+      "Runtime of 352.665308 seconds after 900 pixels\n",
+      "Runtime of 422.822005 seconds after 1000 pixels\n",
+      "Runtime of 487.916489 seconds after 1100 pixels\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<i>Table length=16938694</i>\n",
-       "<table id=\"table46914178516160\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>RA</th><th>DEC</th><th>TARGETID</th><th>BGS_TARGET</th><th>MWS_TARGET</th></tr></thead>\n",
-       "<thead><tr><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th></tr></thead>\n",
-       "<tr><td>59.60086559409994</td><td>-68.12683131313392</td><td>39626498281308189</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.00983139575825</td><td>-68.16966639837612</td><td>39626498281308607</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.01124019929327</td><td>-68.16379040745758</td><td>39626498281308610</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.067316634746724</td><td>-68.1403940503445</td><td>39626498281308675</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.27687723658043</td><td>-68.1477166136955</td><td>39626498285502547</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.351730827700045</td><td>-68.1384524183673</td><td>39626498285502613</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.35480903565853</td><td>-68.15736062454609</td><td>39626498285502619</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.41502834204189</td><td>-68.14758441322456</td><td>39626498285502711</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.57191230896668</td><td>-68.15293728255374</td><td>39626498285502939</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.69114254438406</td><td>-68.12953112115999</td><td>39626498285503141</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>353.90229538577836</td><td>34.19043634623619</td><td>39637366360509482</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.91138859516565</td><td>34.189754930577195</td><td>39637366360509605</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.9140417859083</td><td>34.19516748483782</td><td>39637366360509636</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.9156729717108</td><td>34.190661935823925</td><td>39637366360509656</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.9321728308656</td><td>34.139600042547336</td><td>39637366360509838</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.9425404968417</td><td>34.32039745519458</td><td>39637366360509977</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.94967431338137</td><td>34.33088940446574</td><td>39637366360510070</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.95134213072873</td><td>34.1574064921124</td><td>39637366360510096</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.95491984415384</td><td>34.16769884679844</td><td>39637366360510151</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.95951121176887</td><td>34.159867219725534</td><td>39637366360510211</td><td>131074</td><td>0</td></tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<Table length=16938694>\n",
-       "        RA                DEC              TARGETID     BGS_TARGET MWS_TARGET\n",
-       "     float64            float64             int64         int64      int64   \n",
-       "------------------ ------------------ ----------------- ---------- ----------\n",
-       " 59.60086559409994 -68.12683131313392 39626498281308189     131074          0\n",
-       " 60.00983139575825 -68.16966639837612 39626498281308607     131074          0\n",
-       " 60.01124019929327 -68.16379040745758 39626498281308610     131074          0\n",
-       "60.067316634746724  -68.1403940503445 39626498281308675     131074          0\n",
-       " 60.27687723658043  -68.1477166136955 39626498285502547     131074          0\n",
-       "60.351730827700045  -68.1384524183673 39626498285502613     131074          0\n",
-       " 60.35480903565853 -68.15736062454609 39626498285502619     131074          0\n",
-       " 60.41502834204189 -68.14758441322456 39626498285502711     131074          0\n",
-       " 60.57191230896668 -68.15293728255374 39626498285502939     131074          0\n",
-       " 60.69114254438406 -68.12953112115999 39626498285503141     131074          0\n",
-       "               ...                ...               ...        ...        ...\n",
-       "353.90229538577836  34.19043634623619 39637366360509482     131074          0\n",
-       "353.91138859516565 34.189754930577195 39637366360509605     131074          0\n",
-       " 353.9140417859083  34.19516748483782 39637366360509636     131074          0\n",
-       " 353.9156729717108 34.190661935823925 39637366360509656     131074          0\n",
-       " 353.9321728308656 34.139600042547336 39637366360509838     131074          0\n",
-       " 353.9425404968417  34.32039745519458 39637366360509977     131074          0\n",
-       "353.94967431338137  34.33088940446574 39637366360510070     131074          0\n",
-       "353.95134213072873   34.1574064921124 39637366360510096     131074          0\n",
-       "353.95491984415384  34.16769884679844 39637366360510151     131074          0\n",
-       "353.95951121176887 34.159867219725534 39637366360510211     131074          0"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
