--- a/docs/nb/bgs_map-2randoms.ipynb
+++ b/docs/nb/bgs_map-2randoms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b478cecd-4a3d-4247-bbf8-4862a8765887",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,8 @@
     "\n",
     "import sys\n",
     "sys.path.append('/global/homes/l/lbigwood/LSS/py')\n",
+    "sys.path.append('/global/homes/l/lbigwood/S4Mock/')\n",
+    "\n",
     "import LSS\n",
     "import LSS.SV3\n",
     "import LSS.SV3.cattools as cattools\n",
@@ -47,7 +49,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
+   "id": "db0fd405-d3cf-4e6b-a344-e20cf4bc02f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import sys\n",
+    "#sys.path.append('/global/homes/l/lbigwood/LSS/py')\n",
+    "sys.path.append('/global/homes/l/lbigwood/S4Mock/')\n",
+    "\n",
+    "import S4Mock_io\n",
+    "import geometry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "7594024c-1ca3-49ea-b313-fc52d61e6e36",
    "metadata": {},
    "outputs": [],
@@ -84,19 +113,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "cc1699d2-1ea2-4f24-b8ec-cbf9544035ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "#open randoms\n",
-    "f = fits.open(main_survey_randoms1)\n",
-    "random1=f[1].data"
+    "randoms = S4Mock_io.read_desitargetrandoms()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "2c23d088-4ec8-465c-8c98-458bdee174c5",
    "metadata": {},
    "outputs": [
@@ -112,7 +140,7 @@
    ],
    "source": [
     "#apply bgs mask to randoms and printed statement shows cuts \n",
-    "random1=bgs_mask_randoms(random1)"
+    "randoms=bgs_mask_randoms(randoms)"
    ]
   },
   {
@@ -123,76 +151,7 @@
    "outputs": [],
    "source": [
     "#create mollview map of randoms now they've undergone these cuts \n",
-    "\n",
-    "theta = np.pi / 2. - np.radians(random1['DEC'].data)\n",
-    "phi = np.radians(random1['RA'].data)\n",
-    "\n",
-    "#indices of pixels with non-zero density, unorganised list\n",
-    "all_pixel_indices1 = hp.ang2pix(nside, theta, phi,nest=True, lonlat=False)\n",
-    "\n",
-    "del f\n",
-    "del random1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "6515d441-2f6e-48b4-afbe-ace54356a179",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#second set of randoms \n",
-    "g = fits.open(main_survey_randoms2)\n",
-    "random2=g[1].data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "94fd4d25-6eec-47bb-a595-f0408d256241",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BRIGHT 1 0.9905926121438843\n",
-      "CLUSTER 13 0.9904621002917477\n",
-      "NOBS 0.9771372306417164\n"
-     ]
-    }
-   ],
-   "source": [
-    "#apply bgs mask to randoms and printed statement shows cuts \n",
-    "random2=bgs_mask_randoms(random2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "fb1e2037-4963-4620-b459-75e6a27f4305",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create mollview map of randoms now they've undergone these cuts \n",
-    "theta = np.pi / 2. - np.radians(random2['DEC'].data)\n",
-    "phi = np.radians(random2['RA'].data)\n",
-    "\n",
-    "#indices of pixels with non-zero density, unorganised list\n",
-    "all_pixel_indices2 = hp.ang2pix(nside, theta, phi,nest=True, lonlat=False)\n",
-    "\n",
-    "del g\n",
-    "del random2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "40b79c6d-1868-44b1-8c60-8371150ccf59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_pixel_indices_tot = np.concatenate((all_pixel_indices1,all_pixel_indices2))"
+    "pixel_indices = geometry.radec2pix(randoms['RA'],randoms['DEC'])"
    ]
   },
   {
